--- a/templates/base.html
+++ b/templates/base.html
@@ -420,7 +420,7 @@
                                     <ul class="sub-menu">
                                         <li><a href="shop-3-column.html">Shop 3 Column</a></li>
                                         <li><a href="shop-4-column.html">Shop 4 Column</a></li>
-                                        <li><a href="shop-left-sidebar.html">Shop Left Sidebar</a></li>
+                                        <li><a href="/shop">Shop Left Sidebar</a></li>
                                         <li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
                                         <li><a href="shop-list-left-sidebar.html">Shop List Left Sidebar</a>
                                         </li>
