--- a/templates/base.html
+++ b/templates/base.html
@@ -64,9 +64,9 @@
                         </div>
                         <div class="col-lg-6 d-none d-lg-block">
                             <div class="search-element">
-                                <form action="#">
-                                    <input type="text" placeholder="Search" />
-                                    <button><i class="pe-7s-search"></i></button>
+                                <form action="/search" method="get">
+                                    <input type="text" placeholder="Search" name="query" />
+                                    <button type="submit"><i class="pe-7s-search"></i></button>
                                 </form>
                             </div>
                         </div>
@@ -262,8 +262,8 @@
                 <div class="container">
                     <!-- mobile search start -->
                     <div class="search-element max-width-100">
-                        <form action="#">
-                            <input type="text" placeholder="Search" />
+                        <form >
+                            <input type="text" placeholder="Search"  />
                             <button><i class="pe-7s-search"></i></button>
                         </form>
                     </div>
