--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
                                         <span class="new">{{i.label}}</span>
                                     </span>
                                     <div class="thumb">
-                                        <a href="single-product.html" class="image">
+                                        <a href="/detail_product/{{i.slug}}" class="image">
                                             <img src="{{i.image.url}}" alt="Product" style="height:200px;" />
                                             <img class="hover-image" src="{{i.image.url}}" alt="Product" />
                                         </a>
