--- a/templates/base.html
+++ b/templates/base.html
@@ -474,7 +474,7 @@
                                 <li><a href="blog-single-right-sidebar.html">Single Right Sidbar</a>
                             </ul>
                         </li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="/contacts">Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- OffCanvas Menu End -->
